# iban_validate

./: .editorconfig  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  appveyor.yml  contributing.md
.github/: dependabot.yml
.github/workflows/: fmt_and_clippy.yml  generation_code.yml  test.yml
benches/: iban_benchmark.rs
iban_validate/: Cargo.toml  README.md
iban_validate/benches/: iban_benchmark.rs
iban_validate/src/: base_iban.rs  countries.rs  generated.rs  lib.rs
iban_validate/src/randomize/: mod.rs
iban_validate/tests/: as_ref.rs  format.rs  impls.rs  parse.rs  proptest.rs  randomize.rs  registry_examples.rs  registry_examples_generated.rs  serde.rs  split.rs  validate_country.rs  zeroize.rs
iban_validate_afl_fuzz/: Cargo.toml  Readme.md
iban_validate_afl_fuzz/inputs/: input  wikipedia
iban_validate_afl_fuzz/src/: main.rs
iban_validate_registry_generation/: Cargo.toml  README.md  swift_iban_registry.txt
iban_validate_registry_generation/src/: main.rs
proptest-regressions/tests/: proptest.txt
src/: base_iban.rs  countries.rs  iban_countries.rs  iban_standard.rs  lib.rs
src/iban/: mod.rs
src/tests/: format.rs  impls.rs  mod.rs  parse.rs  proptest.rs  serde.rs  split.rs  test_format.rs  test_parse.rs  test_split.rs  test_validate_country.rs  validate_country.rs
tests/: format.rs  impls.rs  proptest.rs  serde.rs  split.rs  validate_country.rs
