[package]
name = "iban_validate"
# Note: When updating, also update in lib.rs and README.md
version = "2.0.0"
authors = ["Thomas den Hollander <denhollander.thomas@gmail.com>"]
description = "A small crate to verify IBAN account numbers."
repository = "https://github.com/ThomasdenH/iban_check"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["iban", "iban-validator"]
categories = ["parsing"]
edition = "2018"

[badges]
appveyor = { repository = "ThomasdenH/iban-validate" }
travis-ci = { repository = "ThomasdenH/iban_validate" }
coveralls = { repository = "ThomasdenH/iban_validate" }
is-it-maintained-issue-resolution = { repository = "ThomasdenH/iban_validate" }
is-it-maintained-open-issues = { repository = "ThomasdenH/iban_validate" }
maintenance = { status = "passively-maintained" }

[lib]
name = "iban"
path = "src/lib.rs"

[dependencies]
regex = "1.1"
lazy_static = "1.3"

[dev-dependencies]
expectest = "0.11.0"
proptest = "0.9.2"
