[package]
name = "iban_validate"
# Note: When updating, also update in lib.rs and README.md
version = "2.0.0"
authors = ["Thomas den Hollander <denhollander.thomas@gmail.com>"]
description = "A small crate to verify IBAN account numbers."
repository = "https://github.com/ThomasdenH/iban_check"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["iban", "iban-validator"]
categories = ["parsing"]
edition = "2018"

[badges]
appveyor = { repository = "ThomasdenH/iban-validate" }
travis-ci = { repository = "ThomasdenH/iban_validate" }
coveralls = { repository = "ThomasdenH/iban_validate" }
is-it-maintained-issue-resolution = { repository = "ThomasdenH/iban_validate" }
is-it-maintained-open-issues = { repository = "ThomasdenH/iban_validate" }
maintenance = { status = "passively-maintained" }

[lib]
name = "iban"
path = "src/lib.rs"

[features]
# Builds rustdoc links, but requires nightly
intra_rustdoc_links = []

[dependencies]
lazy_static = "1.3"
serde = { version = "1", optional = true, features = ["derive"] }
thiserror = "1"

[dependencies.arrayvec]
version = "0.5.1"
features = ["array-sizes-33-128"]

[target.'cfg(feature = "serde")'.dependencies.arrayvec]
version = "0.5.1"
features = ["array-sizes-33-128", "serde"]

[dependencies.regex]
version = "1"
default-features = false
features = ["std", "perf"]

[dev-dependencies]
proptest = "0.9.2"
static_assertions = "1.1.0"
serde_test = "1"
